<resources>
    <string name="app_name">E-Markaz</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="staff_login_password_hint">Enter Password</string>
    <string name="staff_login_username_hint">Enter Username/Phone Number</string>
    <string name="staff_login_submit_button_text">Login</string>
    <string name="chat_action_logout">Logout</string>
    <string name="chat_action_attachment">Media Attachment</string>
    <string name="chatMessage_retryMessage">Retry</string>
    <string name="app_header">MARKAZU</string>
    <string name="app_subheader">Ssaquafathi Ssunniyya</string>
    <string name="route_map">Route Map</string>
    <string name="notice_board">Notice Board</string>
    <string name="brief">Brief</string>
    <string name="institution">Institution</string>
    <string name="staff">Staff</string>
    <string name="photos">Photos</string>
    <string name="live">Live</string>
    <string name="charity">Charity</string>
    <string name="contact">Contact</string>
    <string name="share">Share</string>
    <string name="setting">Settings</string>
    <string name="about">About</string>
    <string name="search">Search</string>
    <string name="events">Events</string>
    <string name="multimedia">Multimedia</string>
    <string name="photo_section_label">Photos</string>
    <string name="photo_details_teaching">In Markaz, the students have the opportunity to interact with great minds in the field of Islamic knowledge and its different branches. They come across scores of extracurricular, literary activities and training programmes that can help them sharpen their academic skills and enrich their life experience. Effective communication, counselling, Dawa training, Spoken English are major attributes among some others. As our students pursue their studies, they are integrated with the living community by participating in a number of programmes, being carried out across the country. Students at Markaz will find its curriculum to be holistic, touching all major aspects of their life in this new world.</string>
    <string name="photo_details_ap_usthad">Sheikh Aboobacker Ahmed is the leader of one of the traditionalist Sunni factions of Muslims in Kerala state, India and he is one of the most famous Muslim personalities in Kerala. He was also named among 500 most influential Muslims in the world. Kanthapuram A. P. Aboobacker Musalyar is known for his professionalism and expediency..Shaikh Aboobackar Ahmad is the General Secretary of the All India Muslim Scholars Association and founder and Chancellor of Jamia Markazu Ssaquafathi Ssunniyya (Sunni Cultural Centre), Karanthur, Kozhikode, Kerala. He is also chief patron of the Sunni Youth Society and General Secretary, Jamiat Ulema (Kerala).He was appointed as a member of the NAC for the implementation of the RTE act in 2010.Kanthapuram hails from a mediocre peasant family of Alangam Poyil, the much popular and better known A.P. stands for this.He is well known as Shiekh Aboobackar Ahmed in Arab and Western World.</string>
    <string name="ap_usthad">Markazu Ssaqafathu Ssunniya | %1$s</string>
    <string name="photo_details_gate_desc">The newly built gateway of Jamia Markaz has been a great symbol in itself. It implies a vast array of meanings concerning different dimensions of what it means to be a true and productive knowledge, dimensions as cultural, social, civilizational and humanistic. The two big pillars on each side built in a form as books have been put one on another; make it clear that any kind of material developments in the universe are the visible outcomes of the deeper knowledge in those specific domains. The history has proved the fact pretty well that civilizations was not born overnight, but collaborative attempts made by scientists, engineers, scholars, doctors, visionaries,professionals and teachers had constituted into the making of it.  We hope that Bawaba has great potential to strike the minds of all those who came into ponder over it, with some crucial things that draws their memories into grave concerns on Islamic intellectual history and a number of great civilizations it gave birth to. In Brief, the underlying theme consists of a significant message on reviving a culture grown on the edifice of true essence of knowledge. A gate without doors genuinely points out to the epistemic openness that Jamia Markaz envisions throughout its academic and other discourses.</string>
    <string name="app_label_details">Details</string>
    <string name="photo_details_share">Share</string>
    <string name="photo_details_bookmark">Bookmark</string>
    <string name="quran_action_filter">translation view</string>
    <string name="quran_action_details">Surah Details</string>
    <string name="dialog_title_expense">Download Quran Image</string>
    <string name="dialog_quran_message_full_image">In order To Read Whole Quran In Mus\'haf Mode, A 53Mb File Should Be Downloaded .Or You Can Read It On Translate Mode(3&#8211;5Mb).</string>
    <string name="dialog_quran_message_some_image">Some Quran Pages Are Available.Do You Want To Download Whole Quran ? Click Cancel To Read Downloaded Pages</string>
    <string name="dialog_quran_text">Some Messages</string>
    <string name="dialog_btn_quran_cancel">Read In \nTranslator</string>
    <string name="dialog_btn_quran_download">Download \nSura\'</string>
    <string name="dialog_btn_quran_sura">Download \nWhole Qur\'an</string>
    <string name="quran_action_settings">Setting</string>
    <string name="quranLabel">Quran Reader</string>
    <string name="quranRead_pageNo">Page - %1$d</string>
    <string name="listQuran_subTitle">Sura\'</string>
    <string name="title_activity_quran_settings">Settings</string>
    <string name="quran_dialog_message_sura_download">This Surah Is Not Available In Mus\'haf Mode.Do You Want To Download This Surah Or Whole Quran, Or Read In Translator Mode.</string>
    <string name="azhkaar">Azhkar</string>
    <string name="quran_text">Quran</string>
    <string name="dialog_quran_checkbox_text">Do Not Show Again</string>
    <string name="settings_quran_dialog_on_list_sura">Show Dialog On Surah Listing</string>
    <string name="listInSuraList">Surat %1$s</string>
    <string name="quranTranslate_selectLang">Select Language</string>
    <string name="action_bar_zoom_in">Zoom In</string>
    <string name="action_bar_zoom_out">zoom_out</string>
    <string name="arabicStart">بِسْمِ اللَّهِ الرَّحْمَٰنِ الرَّحِيمِ</string>
    <string name="listQuran_ayat">%1$d Ayats</string>
    <string name="staffLogin_usernameLabel">Username/Mobile Number</string>
    <string name="staffLogin_passwordLabel">Password</string>
    <string name="dawrathul_quran">Dawrathul Quran</string>
    <string name="nav_menu_events">Events</string>
    <string name="nav_menu_photos">Photos</string>
    <string name="nav_menu_live">Live</string>
    <string name="nav_menu_add_institution">Add Institution</string>
    <string name="nav_menu_delete_institution">Delete Institution</string>
    <string name="nav_menu_edit_institution">Edit Institution</string>
    <string name="nav_menu_view_institution">View Institution</string>
    <string name="nav_menu_sub_institution">Sub Institution</string>
    <string name="nav_menu_sub_events">Sub Events</string>
    <string name="nav_menu_view_event">View Event</string>
    <string name="nav_menu_delete_event">Delete Event</string>
    <string name="nav_menu_edit_event">Edit Event</string>
    <string name="nav_menu_add_event">Add Event</string>
    <string name="admin_event_add">Add Event</string>
    <string name="form_labelinstitution_name">Institution Name</string>
    <string name="form_label_institution_name">Institution Name</string>
    <string name="form_label_institution_category">Institution Category</string>
    <string name="form_label_institution_label">Institution Label</string>
    <string name="form_label_institution_address">Address</string>
    <string name="form_label_institution_website">Website</string>
    <string name="form_label_institution_email">Email</string>
    <string name="form_label_institution_student_num">Student Count</string>
    <string name="form_label_institution_teach_count">Teaching Staff Count</string>
    <string name="form_label_institution_non_teach_count">Non Teaching Staff Count</string>
    <string name="form_label_institution_alumni">Alumni</string>
    <string name="form_label_institution_principal_name">Principal Name</string>
    <string name="form_label_institution_principal_no">Principal Number</string>
    <string name="form_label_institution_ao_name">AO Name</string>
    <string name="form_label_institution_ao_number">AO Number</string>
    <string name="form_label_institution_established">Established Year</string>
    <string name="form_label_institution_desc">Description</string>
    <string name="add_institute_subtitle_administrative_details">Administrative Details</string>
    <string name="add_institute_subtitle_contact_details">Contact Details</string>
    <string name="add_institute_subtitle_institution_details">Institution Details</string>
    <string name="form_label_institution_contact_no">Contact Number</string>
    <string name="activity_btn_proceed">Proceed</string>
    <string name="form_label_institution_latitude">Latitude</string>
    <string name="form_label_institution_longitude">Longitude</string>
    <string name="activity_btn_submit">Submit</string>
    <string name="listContact_dialogTitle">Enter Phone Number</string>
    <string name="dialog_btn_contact_cancel">Cancel</string>
    <string name="dialog_btn_contact_add">Add</string>
    <string name="form_label_institution_course">Available Course</string>
    <string name="add_institute_subtitle_course_details">Course Details</string>
    <string name="add_events_subtitle">Event Details</string>
    <string name="form_label_event_name">Event Name</string>
    <string name="form_label_event_place">Event Place</string>
    <string name="form_label_event_time">Event Time</string>
    <string name="form_label_event_date">Event Date</string>
    <string name="form_label_event_desc">Event Description</string>
    <string name="form_label_event_number">Contact Number</string>
    <string name="dialog_btn_delete">Delete</string>
    <string name="nextActivity">Go</string>
    <string name="form_label_photo_subject">Photo Title</string>
    <string name="form_label_photo_desc">Description</string>
    <string name="add_photo">Photo Details</string>
    <string name="dashboard">Dashboard</string>
    <string name="addInstPhoto">Add Photos</string>
    <string name="form_label_add_photo">Photos</string>
    <string name="live_details_heading">Live Details</string>
    <string name="live_url_label">Live Url</string>
    <string name="url_eg">https://www.youtube.com/watch?v=2GixUQ6rBm8</string>
    <string name="live_date_label">Live Date</string>
    <string name="live_date_eg">2017&#8211;12&#8211;31 05:30</string>
    <string name="charity_online_donation_label">For Online Donation Please Click Below</string>
    <string name="charity_button_text">DONATE ONLINE</string>
    <string name="photoDetails_name">%1$s / %2$s</string>
    <string name="charity_bank_detail_label">For Donation Through Banks,\n Please Refer The Following Details</string>
    <string name="charity_bank_1">MARKAZU SSAQAFATHI SSUNNIYYA (FCRA ACCOUNT) STATE BANK OF INDIA, MANANCHIRA, KOZHIKODE</string>
    <string name="charity_bank_ifsc">IFSC</string>
    <string name="charity_bank1_ifsc_code">SBIN0000861</string>
    <string name="charity_bank_swift">SWIFT CODE</string>
    <string name="charity_bank1_swift_code">SBININBB392</string>
    <string name="nav_menu_contact">Contact</string>
</resources>