<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/dashboard"
            />
        <item
            android:id="@+id/nav_inst"
            android:icon="@drawable/ic_institution"
            android:title="@string/institution" />
        <item
            android:id="@+id/nav_eve"
            android:icon="@drawable/ic_event"
            android:title="@string/events" />
        <item
            android:id="@+id/nav_mult"
            android:icon="@drawable/ic_multimedia"
            android:title="@string/multimedia" />
        <item
            android:id="@+id/nav_pho"
            android:icon="@drawable/ic_photo"
            android:title="@string/photos" />
        <item
        android:id="@+id/nav_con"
        android:icon="@drawable/ic_contact"
        android:title="@string/contact" />
        <item
        android:id="@+id/nav_nb"
        android:icon="@drawable/ic_noticeboard"
        android:title="@string/notice_board" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_abt"
                android:icon="@drawable/ic_info"
                android:title="@string/about" />
            <item
                android:id="@+id/nav_set"
                android:icon="@drawable/ic_settings"
                android:title="@string/setting" />
        </menu>
    </item>

</menu>
