<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

  <group android:checkableBehavior="single">
    <item
        android:id="@+id/nav_dashBoard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/dashboard">
    </item>
    <item
        android:id="@+id/nav_institution"
        android:icon="@drawable/ic_institution"
        android:title="@string/institution">
    </item>
    <item
        android:id="@+id/nav_events"

        android:icon="@drawable/ic_event"
        android:title="@string/nav_menu_events"/>
    <item
        android:id="@+id/nav_photo"
        android:visible="true"
        android:icon="@drawable/ic_photo"
        android:title="@string/nav_menu_photos"/>
    <item
        android:id="@+id/nav_live"
        android:icon="@drawable/ic_live"
        android:title="@string/nav_menu_live"/>
    <item
        android:id="@+id/nav_contact"
        android:icon="@drawable/ic_contact"
        android:title="@string/nav_menu_contact"/>
    <item
        android:id="@+id/nav_notice"
        android:icon="@drawable/ic_noticeboard"
        android:title="@string/notice_board"/>
  </group>

  <item
      android:title="Personal Details"
      app:showAsAction="collapseActionView">
    <menu>
      <item
          android:id="@+id/nav_share"
          android:visible="false"
          android:icon="@drawable/ic_settings"
          android:title="@string/setting"/>
      <item
          android:id="@+id/nav_send"
          android:visible="false"
          android:icon="@drawable/ic_info"
          android:title="@string/about"/>
    </menu>
  </item>
</menu>
