<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activitySidePadding"
    tools:context="in.tomtontech.markaz.Admin.AddLiveActivity"
    >
  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      style="@style/form_subtitle"
      android:text="@string/live_details_heading"
      />
  <Button
      android:layout_width="wrap_content"
      android:layout_gravity="end"
      android:onClick="onButtonClick"
      android:layout_height="wrap_content"
      android:text="@string/activity_btn_submit"
      />
  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      style="@style/form_label_style"
      android:text="@string/live_url_label"
      />
  <EditText
      android:id="@+id/addLive_etUrl"
      android:inputType="textUri"
      android:layout_width="match_parent"
      style="@style/form_editText_style"
      android:layout_height="wrap_content"
      android:hint="@string/url_eg"
      />
  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      style="@style/form_label_style"
      android:text="@string/live_date_label"
      />
  <EditText
      android:id="@+id/addLive_etDate"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="datetime"
      style="@style/form_editText_style"
      android:hint="@string/live_date_eg"
      />
</LinearLayout>
