<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/quran_action_translate"
        android:icon="@drawable/ic_translate_mode"
        android:title="@string/quran_action_filter"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/quran_action_zoom_in"
        android:icon="@drawable/ic_zoom_in"
        android:title="@string/action_bar_zoom_in"
        android:visible="false"
        app:showAsAction="always"/>
    <item
        android:id="@+id/quran_action_zoom_out"
        android:icon="@drawable/ic_zoom_out"
        android:title="@string/action_bar_zoom_out"
        android:visible="false"
        app:showAsAction="always"/>
    <item
        android:id="@+id/quran_action_setting"
        android:icon="@drawable/ic_filter_icon"
        android:title="@string/quran_action_settings"
        app:showAsAction="never" />
</menu>