<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingStart="@dimen/login_padding_side"
              android:paddingEnd="@dimen/login_padding_side"
              android:paddingLeft="@dimen/login_padding_side"
              android:paddingRight="@dimen/login_padding_side"
              android:gravity="center_vertical"
              android:orientation="vertical"
              tools:context="in.tomtontech.markaz.Activity.StaffLoginActivity"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/staffLogin_usernameLabel"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/staffLogin_username"
        android:hint="@string/staff_login_username_hint"
        android:inputType="textPersonName"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/staffLogin_passwordLabel"
        />
    <EditText
        android:layout_width="match_parent"
        android:id="@+id/staffLogin_password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/staffLogin_username"
        android:layout_height="wrap_content"
        android:hint="@string/staff_login_password_hint"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onLoginClick"
        app:layout_constraintTop_toBottomOf="@+id/staffLogin_password"
        android:text="@string/staff_login_submit_button_text"
        />
</LinearLayout>
