<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
    >
  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/dialog_title_expense"
      android:paddingLeft="10dp"
      android:paddingStart="10dp"
      android:paddingEnd="10dp"
      android:paddingRight="10dp"
      android:id="@+id/dialog_quran_title"
      style="@style/dialog_title"
      />
  <TextView
      style="@style/dialog_textview_style"
      android:id="@+id/dialog_quran_message"
      android:layout_below="@+id/dialog_quran_title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/dialog_quran_text"
      />
  <CheckBox
      android:layout_below="@+id/dialog_quran_message"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/dialog_quran_checkbox"
      />
  <TextView
      android:layout_toEndOf="@+id/dialog_quran_checkbox"
      android:layout_toRightOf="@+id/dialog_quran_checkbox"
      android:layout_alignTop="@+id/dialog_quran_checkbox"
      android:layout_alignBottom="@+id/dialog_quran_checkbox"
      android:gravity="center"
      android:layout_width="wrap_content"
      android:text="@string/dialog_quran_checkbox_text"
      android:layout_height="wrap_content"
      />
  <LinearLayout
      android:layout_below="@+id/dialog_quran_checkbox"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      >
    <Button
        android:id="@+id/dialog_quran_read"
        style="@style/dialog_button_style"
        android:background="@color/btnCancelColor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/dialog_btn_quran_cancel"
        />

    <Button
        android:id="@+id/dialog_quran_download_sura"
        style="@style/dialog_button_style"
        android:background="@color/btnSurahColor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:minLines="2"
        android:text="@string/dialog_btn_quran_download"
        />
    <Button
        android:id="@+id/dialog_quran_download_quran"
        style="@style/dialog_button_style"
        android:layout_width="0dp"
        android:background="@color/btnQuranColor"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/dialog_btn_quran_sura"
        />
  </LinearLayout>
</RelativeLayout>