<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/bgForListQuran"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical"
                tools:context="in.tomtontech.markaz.Activity.MainActivity"
    >

  <LinearLayout
      android:id="@+id/mainLinear_header"
      android:layout_alignParentTop="true"
      android:layout_width="match_parent"
      android:background="@color/primaryDark"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:padding="10dp"
      >

    <ImageView
        android:layout_width="0dp"
        android:layout_height="@dimen/brand_image_size"
        android:layout_weight="1"
        android:background="@drawable/brief_tv_bg"
        android:contentDescription="@string/app_header"
        android:src="@drawable/ic_launcher"
        />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:orientation="vertical"
        >

      <TextView
          android:id="@+id/main_mainheader"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:paddingTop="8dp"
          android:text="@string/app_header"
          android:textAlignment="center"
          android:textColor="@color/white"
          android:textSize="@dimen/brand_heading_textSize"
          />

      <TextView
          android:id="@+id/main_subheader"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/app_subheader"
          android:textAlignment="center"
          android:textColor="@color/white"
          android:textSize="@dimen/brand_subheading_textSize"
          />
    </LinearLayout>
  </LinearLayout>
  <ScrollView
      android:id="@+id/mainScrollView"
      android:background="@color/bgForListQuran"
      android:layout_below="@+id/mainLinear_header"
      android:layout_width="match_parent"
      android:layout_above="@+id/mainLinear_footer"
      android:layout_height="wrap_content"
      >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:baselineAligned="false"
          android:orientation="horizontal"
          android:paddingTop="15dp"
          >

        <TextView
            style="@style/grid_title"
            android:id="@+id/main_section_institution"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onSectionClick"
            android:drawablePadding="8dp"
            android:drawableTop="@drawable/ic_institution"
            android:text="@string/institution"
            />

        <TextView
            style="@style/grid_title"
            android:id="@+id/main_section_event"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="8dp"
            android:onClick="onSectionClick"
            android:drawableTop="@drawable/ic_event"
            android:text="@string/events"
            />

        <TextView
            style="@style/grid_title"
            android:id="@+id/main_section_multimedia"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onSectionClick"
            android:drawablePadding="8dp"
            android:drawableTop="@drawable/ic_multimedia"
            android:text="@string/multimedia"
            />
      </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:baselineAligned="false"
          >

        <TextView
            style="@style/grid_title"
            android:id="@+id/main_section_photo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:drawablePadding="8dp"
            android:drawableTop="@drawable/ic_photo"
            android:onClick="onSectionClick"
            android:text="@string/photos"
            />

        <TextView
            style="@style/grid_title"
            android:id="@+id/main_section_charity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:drawablePadding="8dp"
            android:drawableTop="@drawable/ic_charity"
            android:onClick="onSectionClick"
            android:text="@string/charity"
            />

        <TextView
            style="@style/grid_title"
            android:id="@+id/main_section_contact"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:drawablePadding="8dp"
            android:drawableTop="@drawable/ic_contact"
            android:onClick="onSectionClick"
            android:text="@string/contact"
            />
      </LinearLayout>
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          >
        <TextView
            style="@style/grid_title"
            android:id="@+id/main_section_quran"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:drawablePadding="8dp"
            android:drawableTop="@drawable/ic_quran"
            android:onClick="onSectionClick"
            android:text="@string/quran_text"
            />

        <TextView
            style="@style/grid_title"
            android:id="@+id/main_section_dawra"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:drawablePadding="8dp"
            android:drawableTop="@drawable/ic_bookmark"
            android:onClick="onSectionClick"
            android:text="@string/dawrathul_quran"
            />
        <TextView
            style="@style/grid_title"
            android:id="@+id/main_section_azhkar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:drawablePadding="8dp"
            android:drawableTop="@drawable/ic_azhkar"
            android:onClick="onSectionClick"
            android:text="@string/azhkaar"
            />
      </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:baselineAligned="false"
          >

        <TextView
            style="@style/grid_title"
            android:id="@+id/main_section_noticeBoard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:drawableTop="@drawable/ic_noticeboard"
            android:onClick="onSectionClick"
            android:text="@string/notice_board"
            />

        <TextView
            style="@style/grid_title"
            android:id="@+id/main_section_brief"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:drawablePadding="8dp"
            android:drawableTop="@drawable/ic_briefcase"
            android:onClick="onSectionClick"
            android:text="@string/brief"
            />
        <TextView
            style="@style/grid_title"
            android:id="@+id/main_section_routeMap"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:drawablePadding="8dp"
            android:drawableTop="@drawable/ic_routemap"
            android:onClick="onSectionClick"
            android:text="@string/route_map"
            />
      </LinearLayout>
    </LinearLayout>
  </ScrollView>
  <LinearLayout
      android:id="@+id/mainLinear_footer"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:background="@color/colorPrimaryDark"
      android:orientation="horizontal"
      >
    <TextView
        style="@style/grid_title_footer"
        android:id="@+id/main_section_staff"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableTop="@drawable/ic_staff"
        android:onClick="onSectionClick"
        android:text="@string/staff"
        />
    <TextView
        style="@style/grid_title_footer"
        android:id="@+id/main_section_about"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableTop="@drawable/ic_info"
        android:onClick="onSectionClick"
        android:text="@string/about"
        />
    <TextView
        android:id="@+id/main_section_settings"
        style="@style/grid_title_footer"
        android:onClick="onSectionClick"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableTop="@drawable/ic_settings"
        android:text="@string/setting"
        />
  </LinearLayout>
</RelativeLayout>
