<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
    >
  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/dialog_title_expense"
      android:paddingLeft="10dp"
      android:paddingStart="10dp"
      android:paddingEnd="10dp"
      android:paddingRight="10dp"
      android:id="@+id/dialog_custom_title"
      style="@style/dialog_title"
      />
  <TextView
      style="@style/dialog_textview_style"
      android:id="@+id/dialog_custom_message"
      android:layout_below="@+id/dialog_custom_title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/dialog_quran_text"
      />
  <LinearLayout
      android:layout_below="@+id/dialog_custom_message"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      >
    <Button
        android:id="@+id/dialog_custom_negative_btn"
        style="@style/dialog_button_style"
        android:background="@color/btnSurahColor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/dialog_btn_contact_cancel"
        />
    <Button
        android:id="@+id/dialog_custom_positive_btn"
        style="@style/dialog_button_style"
        android:layout_width="0dp"
        android:background="@color/btnQuranColor"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/dialog_btn_delete"
        />
  </LinearLayout>
</RelativeLayout>